2026-01-13 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.6.0-alpha
	* Added the docs directory.
	* Updated build.gradle.
		* Added the javadoc extension.
		* The javadoc task will output the contents in the newly added
		docs directory.
	* Updated package-info.java from the pacio package.
		* The Javadoc now uses paragraphs.
		* Redescribed the Javadoc comment for the package, now calling it
		the main package of the library.
	* Updated PacIO.java.
		* The Javadoc now uses paragraphs.
		* Compacted the code.
	* Updated package-info.java from the file package.
		* The Javadoc now uses paragraphs.
		* Reworked on the Javadoc comment, now explaining what it's used
		for, and how it's used.
	* Updated PacObject.java.
		* Removed the name variable, as it is already stored in the path
		variable.
		* The constructor now throws an IllegalArgumentException when the
		file path is null.
		* The method getName() now functions differently, now returning
		with path.getFileName.toString().
	* Updated PacFile.java.
		* The Javadoc now uses paragraphs.
		* The read() methods now return 0 if it is out of bounds.
		* The write() methods now won't do anything if it is out of bounds.
		* The from() methods now automatically open the PacFile.
		* Changed the local variable names from the from() methods.
		* The constructor is now public.
	* Updated PacDirectory.java.
		* The Javadoc now uses paragraphs.
		* The save() method is no longer final.
		* The getFiles() method is now final.
		* The open() method does not automatically open the file entries.
	* Updated Loadable.java.
		* The Javadoc now uses paragraphs.
		* The methods are now simply default methods and no longer
		public static, as it's redundant.
		* Elaborated the Javadoc comments for the interface and its
		methods.
		* Changed load() to open().
		* Changed unload() to close().
	* Updated Savable.java.
		* The Javadoc now uses paragraphs.